Added a bunch of entries

--- a/ucsc_bibliography.bib
+++ b/ucsc_bibliography.bib
@@ -3,4 +3,72 @@
 # WASP Laboratory. UC Santa Cruz
 # Fall 2012 - ...
 
+@article{,
+	title	= {},
+	author  = {},
+	year    = {},
+        conference = {},
+        pages = {}
+}
 
+@article{whyinformationsecurityishard,
+	title	= {Why information security is hard - an economic perspective},
+	author  = {R. Anderson},
+	year    = {2001},
+        conference = {Computer Security Applications Conference, 2001. ACSAC 2001. Proceedings 17th Annual},
+        pages = {358 - 365}
+}
+
+
+@article{setuiddemystiﬁed,
+	title	= {Setuid Demystiﬁed},
+	author  = {Hao Chen, David Wagner, Drew Dean},
+	year    = {2002},
+        conference = {11th USENIX Security}
+}
+@article{stackinspection:theoryandvariants,
+	title	= {Stack inspection: theory and variants},
+	author  = {Cedric Fournet, Andrew Gordon},
+	year    = {2002},
+        conference = {POPL '02 Proceedings of the 29th ACM SIGPLAN-SIGACT symposium on Principles of programming languages},
+        pages = {307-318}
+}
+@ARTICLE{4768655, 
+author={Enck, W. and Ongtang, M. and McDaniel, P.}, 
+journal={Security Privacy, IEEE}, title={Understanding Android Security}, 
+year={2009}, 
+month={jan.-feb. }, 
+volume={7}, 
+number={1}, 
+pages={50 -57}, 
+keywords={Application software;Cellular phones;Data security;Java;Manufacturing industries;Middleware;Operating systems;Programming;Shipbuilding industry;Social network services;Web services;operating systems (computers);security of data;android security;mobile phones;open source operating system;Android;Smartphones;mobile phones;security;}, 
+doi={10.1109/MSP.2009.26}, 
+ISSN={1540-7993},
+}
+
+@ARTICLE{1159651, 
+author={Sabelfeld, A. and Myers, A.C.}, 
+journal={Selected Areas in Communications, IEEE Journal on}, title={Language-based information-flow security}, 
+year={2003}, 
+month={jan}, 
+volume={21}, 
+number={1}, 
+pages={ 5 - 19}, 
+keywords={Access control;Computer security;Concurrent computing;Cryptography;Data security;Information analysis;Information security;Information systems;Military computing;Protection; computer networks; programming languages; reviews; security of data; telecommunication security; attacker; computing system; confidentiality; covert channels; end-to-end behavior; information-flow policies; language-based information-flow security; programming-language techniques; secret input data; security policies; static program analysis;}, 
+doi={10.1109/JSAC.2002.806121}, 
+ISSN={0733-8716},
+}
+
+@MISC{Leino97asemantic,
+    author = {K. Rustan M. Leino and Rajeev Joshi},
+    title = {A Semantic Approach to Secure Information Flow},
+    year = {1997}
+}
+ 
+@article{,
+	title	= {},
+	author  = {},
+	year    = {},
+        conference = {},
+        pages = {}
+}
