Added the rest of the security papers to ucsc bib

--- a/ucsc_bibliography.bib
+++ b/ucsc_bibliography.bib
@@ -64,11 +64,271 @@ ISSN={0733-8716},
     title = {A Semantic Approach to Secure Information Flow},
     year = {1997}
 }
+
+@inproceedings{Zeldovich:2006:MIF:1267308.1267327,
+ author = {Zeldovich, Nickolai and Boyd-Wickizer, Silas and Kohler, Eddie and Mazi\`{e}res, David},
+ title = {Making information flow explicit in HiStar},
+ booktitle = {Proceedings of the 7th USENIX Symposium on Operating Systems Design and Implementation - Volume 7},
+ series = {OSDI '06},
+ year = {2006},
+ location = {Seattle, WA},
+ pages = {19--19},
+ numpages = {1},
+ url = {http://dl.acm.org/citation.cfm?id=1267308.1267327},
+ acmid = {1267327},
+ publisher = {USENIX Association},
+ address = {Berkeley, CA, USA},
+} 
+
+BibTeX | BibTeX (beta) | EndNote | ACM Ref
+@article{Morris:1973:PPL:361932.361937,
+ author = {Morris,Jr., James H.},
+ title = {Protection in programming languages},
+ journal = {Commun. ACM},
+ issue_date = {Jan. 1973},
+ volume = {16},
+ number = {1},
+ month = jan,
+ year = {1973},
+ issn = {0001-0782},
+ pages = {15--21},
+ numpages = {7},
+ url = {http://doi.acm.org/10.1145/361932.361937},
+ doi = {10.1145/361932.361937},
+ acmid = {361937},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {access control, access keys, authentication, environments, protection, seals, secrecy, trademarks, types},
+} 
+
+@article{Kennedy:2006:SNP:1226601.1226605,
+ author = {Kennedy, Andrew},
+ title = {Securing the .NET programming model},
+ journal = {Theor. Comput. Sci.},
+ issue_date = {8 November 2006},
+ volume = {364},
+ number = {3},
+ month = nov,
+ year = {2006},
+ issn = {0304-3975},
+ pages = {311--317},
+ numpages = {7},
+ url = {http://dx.doi.org/10.1016/j.tcs.2006.08.014},
+ doi = {10.1016/j.tcs.2006.08.014},
+ acmid = {1226605},
+ publisher = {Elsevier Science Publishers Ltd.},
+ address = {Essex, UK},
+ keywords = {.NET, C\#, contextual equivalence, full abstraction, security},
+} 
+
+
  
-@article{,
-	title	= {},
-	author  = {},
-	year    = {},
-        conference = {},
-        pages = {}
+@article{SMASHINGTHESTACKFORFUNANDPROFIT,
+	title	= {SMASHING THE STACK FOR FUN AND PROFIT},
+	author  = {Aleph One},
+	year    = {1996},
+        conference = {Phrack Volume 7, Issue 49},
+        pages = {1-32}
 }
+
+@ARTICLE{1324594, 
+author={Pincus, J. and Baker, B.}, 
+journal={Security Privacy, IEEE}, title={Beyond stack smashing: recent advances in exploiting buffer overruns}, 
+year={2004}, 
+month={july-aug.}, 
+volume={2}, 
+number={4}, 
+pages={ 20 - 27}, 
+keywords={Computer hacking;Computer security;Computer worms;Java;Lab-on-a-chip;Payloads;Power system security;Privacy;Runtime environment; computer crime; storage management; CERT advisories; arc injection; buffer overruns; exploits; heap smashing; high-profile worms; malicious crackers; pointer subterfuge; security vulnerabilities; stack smashing;65;arc injection;attacking systems;buffer overruns;heap smashing;pointer subterfuge;stack smashing;}, 
+doi={10.1109/MSP.2004.36}, 
+ISSN={1540-7993},
+}
+
+@incollection{Erlingsson:2007:LSS:1793914.1793919,
+ author = {Erlingsson, \'{U}lfar},
+ chapter = {Low-level software security: attacks and defenses},
+ title = {Foundations of security analysis and design IV},
+ editor = {Aldini, Alessandro and Gorrieri, Roberto},
+ year = {2007},
+ isbn = {3-540-74809-1, 978-3-540-74809-0},
+ pages = {92--134},
+ numpages = {43},
+ url = {http://dl.acm.org/citation.cfm?id=1793914.1793919},
+ acmid = {1793919},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg},
+} 
+
+@article{Rivest:1978:MOD:359340.359342,
+ author = {Rivest, R. L. and Shamir, A. and Adleman, L.},
+ title = {A method for obtaining digital signatures and public-key cryptosystems},
+ journal = {Commun. ACM},
+ issue_date = {Feb. 1978},
+ volume = {21},
+ number = {2},
+ month = feb,
+ year = {1978},
+ issn = {0001-0782},
+ pages = {120--126},
+ numpages = {7},
+ url = {http://doi.acm.org/10.1145/359340.359342},
+ doi = {10.1145/359340.359342},
+ acmid = {359342},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {authentication, cryptography, digital signatures, electronic funds transfer, electronic mail, factorization, message-passing, prime number, privacy, public-key cryptosystems, security},
+}
+
+@inproceedings{Anderson:1993:WCF:168588.168615,
+ author = {Anderson, Ross},
+ title = {Why cryptosystems fail},
+ booktitle = {Proceedings of the 1st ACM conference on Computer and communications security},
+ series = {CCS '93},
+ year = {1993},
+ isbn = {0-89791-629-8},
+ location = {Fairfax, Virginia, USA},
+ pages = {215--227},
+ numpages = {13},
+ url = {http://doi.acm.org/10.1145/168588.168615},
+ doi = {10.1145/168588.168615},
+ acmid = {168615},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
+@article{Gentry:2010:CAF:1666420.1666444,
+ author = {Gentry, Craig},
+ title = {Computing arbitrary functions of encrypted data},
+ journal = {Commun. ACM},
+ issue_date = {March 2010},
+ volume = {53},
+ number = {3},
+ month = mar,
+ year = {2010},
+ issn = {0001-0782},
+ pages = {97--105},
+ numpages = {9},
+ url = {http://doi.acm.org/10.1145/1666420.1666444},
+ doi = {10.1145/1666420.1666444},
+ acmid = {1666444},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
+@inproceedings{Bellovin:2004:LBS:1038254.1038316,
+ author = {Bellovin, Steven M.},
+ title = {A Look Back at "Security Problems in the TCP/IP Protocol Suite"},
+ booktitle = {Proceedings of the 20th Annual Computer Security Applications Conference},
+ series = {ACSAC '04},
+ year = {2004},
+ isbn = {0-7695-2252-1},
+ pages = {229--249},
+ numpages = {21},
+ url = {http://dx.doi.org/10.1109/CSAC.2004.3},
+ doi = {10.1109/CSAC.2004.3},
+ acmid = {1038316},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+} 
+
+
+@inproceedings{Dingledine:2004:TSO:1251375.1251396,
+ author = {Dingledine, Roger and Mathewson, Nick and Syverson, Paul},
+ title = {Tor: the second-generation onion router},
+ booktitle = {Proceedings of the 13th conference on USENIX Security Symposium - Volume 13},
+ series = {SSYM'04},
+ year = {2004},
+ location = {San Diego, CA},
+ pages = {21--21},
+ numpages = {1},
+ url = {http://dl.acm.org/citation.cfm?id=1251375.1251396},
+ acmid = {1251396},
+ publisher = {USENIX Association},
+ address = {Berkeley, CA, USA},
+} 
+
+
+@inproceedings{Chen:2010:SLW:1849417.1849974,
+ author = {Chen, Shuo and Wang, Rui and Wang, XiaoFeng and Zhang, Kehuan},
+ title = {Side-Channel Leaks in Web Applications: A Reality Today, a Challenge Tomorrow},
+ booktitle = {Proceedings of the 2010 IEEE Symposium on Security and Privacy},
+ series = {SP '10},
+ year = {2010},
+ isbn = {978-0-7695-4035-1},
+ pages = {191--206},
+ numpages = {16},
+ url = {http://dx.doi.org/10.1109/SP.2010.20},
+ doi = {10.1109/SP.2010.20},
+ acmid = {1849974},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+ keywords = {side-channel-leak, Software-as-a-Service (SaaS), web application, encrypted traffic, ambiguity set, padding},
+} 
+
+@article{Needham:1978:UEA:359657.359659,
+ author = {Needham, Roger M. and Schroeder, Michael D.},
+ title = {Using encryption for authentication in large networks of computers},
+ journal = {Commun. ACM},
+ issue_date = {Dec. 1978},
+ volume = {21},
+ number = {12},
+ month = dec,
+ year = {1978},
+ issn = {0001-0782},
+ pages = {993--999},
+ numpages = {7},
+ url = {http://doi.acm.org/10.1145/359657.359659},
+ doi = {10.1145/359657.359659},
+ acmid = {359659},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {authentication, data encryption standard, encryption, networks, protocols, public-key cryptosystems, security},
+} 
+
+@ARTICLE{Fagin96comparinginformation,
+    author = {Ronald Fagin and Moni Naor and Peter Winkler},
+    title = {Comparing Information Without Leaking It},
+    journal = {Communications of the ACM},
+    year = {1996},
+    volume = {39},
+    pages = {77--85}
+}
+
+
+@inproceedings{Bhargavan:2010:MVS:1706299.1706350,
+ author = {Bhargavan, Karthikeyan and Fournet, C{\'e}dric and Gordon, Andrew D.},
+ title = {Modular verification of security protocol code by typing},
+ booktitle = {Proceedings of the 37th annual ACM SIGPLAN-SIGACT symposium on Principles of programming languages},
+ series = {POPL '10},
+ year = {2010},
+ isbn = {978-1-60558-479-9},
+ location = {Madrid, Spain},
+ pages = {445--456},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/1706299.1706350},
+ doi = {10.1145/1706299.1706350},
+ acmid = {1706350},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {f7, refinement type},
+} 
+[download]
+@article{Bhargavan:2010:MVS:1707801.1706350,
+ author = {Bhargavan, Karthikeyan and Fournet, C{\'e}dric and Gordon, Andrew D.},
+ title = {Modular verification of security protocol code by typing},
+ journal = {SIGPLAN Not.},
+ issue_date = {January 2010},
+ volume = {45},
+ number = {1},
+ month = jan,
+ year = {2010},
+ issn = {0362-1340},
+ pages = {445--456},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/1707801.1706350},
+ doi = {10.1145/1707801.1706350},
+ acmid = {1706350},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {f7, refinement type},
+} 
